# OpenGL-Based-Physics-Engine

./: .gitignore  CMakeLists.txt  Camera.h  DrawObjects.cpp  DrawObjects.h  Mesh.h  Model.cpp  README.md  demo_offline.cpp  demo_online.cpp  main.cpp  utils.h
Common/: DrawObjects.cpp  Mesh.cpp  Model.h  Shader.cpp  Shader.h  utils.h
Networking/Cpp-Game-Server/: CMakeLists.txt  README.md
Networking/Cpp-Game-Server/DeterministicFloat/: CMakeLists.txt  glacier_float.cpp
Networking/Cpp-Game-Server/Examples/Games/: CircleVsRect.cpp  MMO_server.cpp  olcPGEX_TransformedView.h
Networking/Cpp-Game-Server/Examples/NetClient/: SimpleClients.cpp
Networking/Cpp-Game-Server/Examples/UnityConnection/: Unity_common.h
Networking/Cpp-Game-Server/Games/: MMO_common.h  olcPixelGameEngine.h
Networking/Cpp-Game-Server/NetCommon/: net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_thread_safe_queue.h  rc_net.h
Networking/Cpp-Game-Server/NetServer/: SimpleServer.cpp
Networking/Cpp-Game-Server/UnityConnection/: Unity_server.cpp
Networking/Cpp-Game-Server/dependencies/src/: Makefile.msc
Networking/Cpp-Game-Server/dependencies/src/examples/cpp11/: Makefile.am  Makefile.in
Networking/Cpp-Game-Server/dependencies/src/examples/cpp20/: Makefile.am  Makefile.in
Physics3D/: CMakeLists.txt  colissionBuffer.h  layer.cpp  layer.h  part.cpp  part.h  physical.cpp  physical.h  rigidBody.cpp  world.cpp  world.h  worldPhysics.cpp
Physics3D/CollisionCast/: collisionCast.h
Physics3D/boundstree/: boundsTree.cpp  boundsTree.h
Physics3D/datastructures/: aligned_alloc.cpp
Physics3D/examples/: test.cpp
Physics3D/externalforces/: directionalGravity.cpp  externalForce.h
Physics3D/geometry/: convexShapeBuilder.h  genericIntersection.cpp  genericIntersection.h  indexedShape.cpp  intersection.cpp  shape.h
Physics3D/math/: bounds.h  cframe.h  position.h  utils.h
Physics3D/math/linalg/: vec.h
Physics3D/misc/: validityHelper.h
Physics3D/misc/serialization/: serialization.cpp
Physics3D/threading/: upgradeableMutex.cpp
PhysicsServer/: PhysicsCommon.h  PhysicsServer.cpp
dependencies/include/assimp/: revision.h
dependencies/include/glad/: glad.h
dependencies/include/imgui/cpp/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
dependencies/src/: glad.c
shaders/PBR/: pbr.fs  pbr_textures.fs
shaders/PBR/IBL/: background.fs  background.vs
